docs/wherehaus_sty.css
@font-face { font-family: Gilroy; src: url("Gilroy-ExtraBold.otf"); }
@font-face { font-family: Monosten; src: url("Monosten-A-webfont.ttf"); }

:root 
{
    --light-grey: rgba(0, 0, 0, 0.39);
    --mid-grey: rgba(0, 0, 0, 0.59);
    --dark-grey: rgba(0, 0, 0, 0.69);
    --off-white: #f0f6f8;
    --wolf-red: #fa5f28;
    --purple: #4b00a2;
    
    --breakpoint-xs: 0;
    --breakpoint-sm: 576px;
    --breakpoint-md: 768px;
    --breakpoint-lg: 992px;
    --breakpoint-xl: 1200px;
    --title: Gilroy, Futura, Helvetica, sans-serif;
    --monospace: Monosten, monospace;
}

html
{
    background: var(--off-white);
    margin: 40px 15%;
}




/* menu */

header
{
    margin-bottom: 100px;
}

.logo
{
    width: 140px;
}

.menu-div
{
    text-align: right;
    display: inline-block;
    width: 80%;
}

a
{ 
    color: var(--light-grey)
}

.menu
{
    font-family: var(--monospace);
    font-size: 0.7rem;
    color: var(--light-grey);
    margin-left: 40px;
    letter-spacing: 0.4px;
    text-decoration: none;
}

.menu:hover
{
    border-bottom-style: solid;
    border-bottom-color: var(--grey);
    border-bottom-width: 2px;
}




/* hero */

.app-icon
{
    width: 50px;
}

.hero
{
    display: flex;
}

.hero-div
{
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    width: 50%;
    position: relative;
    margin-right: 5%;
}

h1
{
    font-family: var(--title);
    font-size: 2.5rem;
    color: var(--dark-grey);
    margin-bottom: 5px;
    line-height: 0.9;
}

p
{
    font-family: var(--monospace);
    font-size: 0.875rem;
    color: var(--dark-grey);
    margin-bottom: 70px;
}

.hero-img
{
    align-self: flex-end;
}




/* button */

.button
{
    padding: 20px 50px;
    box-shadow: rgba(17,17,17,0.3) 0 5px 15px 0;
    background-color: rgba(255, 255, 255, 0.57);
    border-radius: 80px;
    transition: all 0.2s ease-in;
    outline: none;
    font-family: var(--title);
    font-size: 1rem;
    letter-spacing: 2px;
    color: var(--dark-grey);
    cursor: pointer;
}

.button:hover
{
    box-shadow: rgba(17,17,17,0.3) 0 10px 25px 0;
    color: var(--mid-grey);
}




/* footer */

.footer
{
    margin-top: 100px;
    font-family: var(--monospace);
    font-size: 0.7rem;
    color: var(--light-grey);
    letter-spacing: 0.4px;
}

.footer > space
{
    margin-right: 40px;
}

